[gd_scene load_steps=21 format=2]

[ext_resource path="res://Fonts/carlito/Carlito-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Furniture/Assets/dialogue-white.png" type="Texture" id=2]
[ext_resource path="res://Characters/Player2.png" type="Texture" id=3]
[ext_resource path="res://Characters/baby.png" type="Texture" id=4]
[ext_resource path="res://Fonts/MainMenuTitleFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Fonts/MainMenuSubTitleFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Fonts/ButtonFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Furniture/Assets/bed-large.png" type="Texture" id=8]
[ext_resource path="res://Furniture/Assets/computer-desk.png" type="Texture" id=9]
[ext_resource path="res://Furniture/Assets/frig.png" type="Texture" id=10]
[ext_resource path="res://Furniture/Crib.tscn" type="PackedScene" id=11]
[ext_resource path="res://MainMenu.gd" type="Script" id=12]
[ext_resource path="res://SFX/godot-wildjam-24-track1-kevin-edit.ogg" type="AudioStream" id=13]
[ext_resource path="res://Wildcards.png" type="Texture" id=14]
[ext_resource path="res://GWJ-WC-3.png" type="Texture" id=15]
[ext_resource path="res://GWJ-WC-2.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 12 )

[node name="background" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 288.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 512.0
margin_bottom = 288.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_1" type="Control" parent="."]
margin_right = 512.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleLabel" type="Label" parent="menu_1"]
margin_left = 76.0941
margin_top = 58.102
margin_right = 494.094
margin_bottom = 109.102
custom_fonts/font = ExtResource( 5 )
text = "Game Jam Simluator"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="subtitleLabel" type="Label" parent="menu_1"]
margin_left = 160.627
margin_top = 107.439
margin_right = 354.627
margin_bottom = 133.439
custom_fonts/font = ExtResource( 6 )
text = "Godot Wild Jam 24"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonGroup" type="VBoxContainer" parent="menu_1"]
margin_left = 200.773
margin_top = 139.746
margin_right = 306.773
margin_bottom = 227.746
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="menu_1/buttonGroup"]
margin_right = 106.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 7 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardButton" type="Button" parent="menu_1/buttonGroup"]
margin_top = 26.0
margin_right = 106.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 7 )
text = "Leader Board"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="menu_1/buttonGroup"]
margin_top = 52.0
margin_right = 106.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 7 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="menu_1"]
margin_left = 87.211
margin_top = 226.24
margin_right = 435.211
margin_bottom = 252.24
custom_fonts/font = ExtResource( 6 )
text = "Made by: Kevin Smith and Karl Brewer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backstory_1" type="Control" parent="."]
visible = false
margin_right = 511.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backstoryContinue" type="Button" parent="backstory_1"]
margin_left = 213.179
margin_top = 216.673
margin_right = 283.179
margin_bottom = 243.673
custom_fonts/font = ExtResource( 7 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backstoryTitle" type="Label" parent="backstory_1"]
margin_left = 37.3975
margin_top = 43.033
margin_right = 479.397
margin_bottom = 148.033
custom_fonts/font = ExtResource( 5 )
text = "Welcome"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backstoryText" type="Label" parent="backstory_1"]
margin_left = 64.37
margin_top = 107.739
margin_right = 464.37
margin_bottom = 213.739
custom_fonts/font = ExtResource( 6 )
text = "The year is 2020. The world is in lock-down because of a pandemic. You are an aspiring game developer who enjoys entering game jams."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerNaming" type="Control" parent="."]
visible = false
margin_left = 67.487
margin_top = 83.5329
margin_right = 107.487
margin_bottom = 123.533
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerSprite" type="Sprite" parent="playerNaming"]
position = Vector2( 190.663, 10.3826 )
scale = Vector2( 2.4748, 2.4748 )
texture = ExtResource( 3 )
hframes = 16
frame = 4

[node name="playerNameConfirm" type="Button" parent="playerNaming"]
margin_left = 151.097
margin_top = 100.983
margin_right = 229.097
margin_bottom = 126.983
custom_fonts/font = ExtResource( 7 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerNameEntry" type="TextEdit" parent="playerNaming"]
margin_left = 184.661
margin_top = 66.0971
margin_right = 352.661
margin_bottom = 89.0971
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerNameLabel" type="Label" parent="playerNaming"]
margin_left = 63.5558
margin_top = 68.3439
margin_right = 188.556
margin_bottom = 88.3439
custom_fonts/font = SubResource( 2 )
text = "Your name is:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spouseNaming" type="Control" parent="."]
visible = false
margin_left = 67.487
margin_top = 83.5329
margin_right = 107.487
margin_bottom = 123.533
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spouseSprite" type="Sprite" parent="spouseNaming"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 190.663, 10.3826 )
scale = Vector2( 2.4748, 2.4748 )
texture = ExtResource( 3 )
hframes = 16
frame = 4

[node name="spouseNameConfirm" type="Button" parent="spouseNaming"]
margin_left = 151.097
margin_top = 100.983
margin_right = 229.097
margin_bottom = 126.983
custom_fonts/font = ExtResource( 7 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spouseNameEntry" type="TextEdit" parent="spouseNaming"]
margin_left = 212.505
margin_top = 64.2094
margin_right = 380.505
margin_bottom = 87.2094
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spouseNameLabel" type="Label" parent="spouseNaming"]
margin_left = -22.9312
margin_top = 65.1684
margin_right = 212.069
margin_bottom = 108.168
custom_fonts/font = SubResource( 2 )
text = "You are happily married to:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="babyNaming" type="Control" parent="."]
visible = false
margin_left = 0.943909
margin_right = 512.944
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="babyNameTitle" type="Label" parent="babyNaming"]
margin_left = 71.2626
margin_top = 33.9795
margin_right = 453.263
margin_bottom = 98.9795
custom_fonts/font = SubResource( 3 )
text = "Congratulations! 
You've just had your first child!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="babySprite" type="Sprite" parent="babyNaming"]
position = Vector2( 252.25, 112.085 )
scale = Vector2( 4.805, 4.805 )
texture = ExtResource( 4 )

[node name="babyNameLabel" type="Label" parent="babyNaming"]
margin_left = 201.989
margin_top = 151.492
margin_right = 305.989
margin_bottom = 171.492
custom_fonts/font = SubResource( 4 )
text = "Enter Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="babyNameEntry" type="TextEdit" parent="babyNaming"]
margin_left = 171.447
margin_top = 174.171
margin_right = 339.447
margin_bottom = 197.171
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="babyNameConfirm" type="Button" parent="babyNaming"]
margin_left = 214.337
margin_top = 209.056
margin_right = 292.337
margin_bottom = 235.056
custom_fonts/font = ExtResource( 7 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backstory_2" type="Control" parent="."]
visible = false
margin_right = 511.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backstory2Continue" type="Button" parent="backstory_2"]
margin_left = 213.179
margin_top = 216.673
margin_right = 283.179
margin_bottom = 243.673
custom_fonts/font = ExtResource( 7 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backstory2Text" type="Label" parent="backstory_2"]
margin_left = 43.3326
margin_top = 40.6742
margin_right = 475.333
margin_bottom = 212.674
custom_fonts/font = ExtResource( 6 )
text = "You've entered the Godot Wild Jam 24! There are 9 days to complete a game. Keep your spouse and baby happy while also creating the best game you can."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorial" type="Control" parent="."]
visible = false
margin_right = 511.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorialContinue" type="Button" parent="tutorial"]
margin_left = 213.179
margin_top = 216.673
margin_right = 283.179
margin_bottom = 243.673
custom_fonts/font = ExtResource( 7 )
text = "Play!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bed" type="Sprite" parent="tutorial"]
position = Vector2( 207.18, 99.5788 )
scale = Vector2( 0.572308, 0.572308 )
texture = ExtResource( 8 )

[node name="fridge" type="Sprite" parent="tutorial"]
position = Vector2( 207.652, 132.614 )
texture = ExtResource( 10 )

[node name="crib" parent="tutorial" instance=ExtResource( 11 )]
position = Vector2( 253.43, 102.882 )

[node name="computer" type="Sprite" parent="tutorial"]
position = Vector2( 255.318, 146.772 )
texture = ExtResource( 9 )

[node name="tutorialTitle" type="Label" parent="tutorial"]
margin_left = 230.63
margin_top = 30.1123
margin_right = 267.63
margin_bottom = 53.1123
custom_fonts/font = ExtResource( 6 )
text = "Tips"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sleepHint" type="Label" parent="tutorial"]
margin_left = 54.6632
margin_top = 81.9541
margin_right = 183.663
margin_bottom = 156.954
custom_fonts/font = ExtResource( 6 )
text = "Sleep and eat to regain energy"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="babyHint" type="Label" parent="tutorial"]
margin_left = 278.617
margin_top = 87.3368
margin_right = 501.617
margin_bottom = 113.337
custom_fonts/font = ExtResource( 6 )
text = "Take care of your baby"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="computerHint" type="Label" parent="tutorial"]
margin_left = 283.944
margin_top = 126.069
margin_right = 479.944
margin_bottom = 201.069
custom_fonts/font = ExtResource( 6 )
text = "Squeeze in as much dev time as possible!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -8.0
autoplay = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 319.765, 56.1099 )
scale = Vector2( 0.802513, 0.802513 )

[node name="GWJ-WC-3" type="Sprite" parent="Node2D"]
position = Vector2( 134.979, 160.601 )
scale = Vector2( 0.0625557, 0.0625557 )
texture = ExtResource( 15 )

[node name="GWJ-WC-2" type="Sprite" parent="Node2D"]
position = Vector2( 74.7974, 160.203 )
scale = Vector2( 0.0625557, 0.0625557 )
texture = ExtResource( 16 )

[node name="Wildcards" type="Sprite" parent="Node2D"]
position = Vector2( 174.799, 97.354 )
scale = Vector2( 0.850619, 0.850619 )
texture = ExtResource( 14 )
[connection signal="pressed" from="menu_1/buttonGroup/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="menu_1/buttonGroup/LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
[connection signal="pressed" from="menu_1/buttonGroup/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="backstory_1/backstoryContinue" to="." method="_on_backstoryContinue_pressed"]
[connection signal="pressed" from="playerNaming/playerNameConfirm" to="." method="_on_playerNameConfirm_pressed"]
[connection signal="pressed" from="spouseNaming/spouseNameConfirm" to="." method="_on_spouseNameConfirm_pressed"]
[connection signal="pressed" from="babyNaming/babyNameConfirm" to="." method="_on_babyNameConfirm_pressed"]
[connection signal="pressed" from="backstory_2/backstory2Continue" to="." method="_on_backstory2Continue_pressed"]
[connection signal="pressed" from="tutorial/tutorialContinue" to="." method="_on_tutorialContinue_pressed"]
